--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#007aff" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
-  <link rel="icon" href="/src/static/icon-bean.png" />
+  <link rel="icon" href="/src/static/icons/favicon.png" />
   <title>ZaUI Coffee</title>
 </head>
 
